--- a/CarDealer/CarDealer/App.xaml
+++ b/CarDealer/CarDealer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="PetStore.App"
+﻿<Application x:Class="CarDealer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PetStore"
+             xmlns:local="clr-namespace:CarDealer"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
