--- a/CarDealer/CarDealer/MainWindow.xaml
+++ b/CarDealer/CarDealer/MainWindow.xaml
@@ -1,20 +1,17 @@
 ﻿<Window x:Class="CarDealer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarDealer" 
-        xmlns:viewmodel="clr-namespace:CarDealer.ViewModel;assembly=CarDealer.ViewModel" 
+        xmlns:viewmodel="clr-namespace:CarDealer.ViewModel;assembly=CarDealer.ViewModel"
         d:DataContext="{d:DesignInstance Type=viewmodel:InventoryViewModel}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <Style x:Key="InputTextBoxStyle" TargetType="TextBox">
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
-                </Trigger>
-            </Style.Triggers>
+        <Style x:Key="InputTextBoxStyle" TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+            <Setter Property="Margin" Value="0,0,0,16"/>
         </Style>
     </Window.Resources>
     
@@ -24,20 +21,22 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <ListView Grid.Column="0" ItemsSource="{Binding Cars}">
+        <ListView Grid.Column="0" ItemsSource="{Binding Cars}" Padding="20">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding Model}"/>
-                        <TextBlock Text="{Binding Manufacturer}"/>
-                        <TextBlock Text="{Binding Vin}"/>
+                        <TextBlock Style="{DynamicResource MaterialDesignCaptionTextBlock}">
+                            <Run Text="{Binding Manufacturer}"/>
+                            <Run Text="{Binding Model}"/>
+                        </TextBlock>
+                        <TextBlock Text="{Binding Vin}" Style="{DynamicResource MaterialDesignBody1TextBlock}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <StackPanel Grid.Column="1">
-            <TextBlock Text="Manufacturer"/>
+        <StackPanel Grid.Column="1" Margin="20">
+            <TextBlock Text="Manufacturer" Style="{DynamicResource MaterialDesignTextBlock}"/>
             <TextBox Text="{Binding NewCar.Manufacturer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}"
                      Style="{StaticResource InputTextBoxStyle}"/>
             
